[tool.poetry]
name = "simple-simcse-ja"
version = "0.1.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.10.x"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp310-cp310-linux_x86_64.whl" }
tqdm = "^4.64.1"
numpy = "<1.23.0"
pandas = "^1.5.2"
transformers = { extras = ["ja", "sentencepiece"], version = "^4.26.1" }
datasets = { extras = ["tensorflow"], version = "^2.8.0" }
tokenizers = "^0.13.2"
accelerate = "^0.16.0"
more-itertools = "^9.0.0"
scikit-learn = "^1.2.0"
classopt = "^0.2.1"
konoha = "^5.0.0"
mwparserfromhell = "^0.6.4"
python-snappy = "^0.6.1"
typed-argument-parser = "^1.7.2"
mojimoji = "^0.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
