[tool.poetry]
name = "simple-simcse-ja"
version = "0.1.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.10.x"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl" }
transformers = { extras = ["ja", "sentencepiece"], version = "^4.28.1" }
typed-argument-parser = "^1.8.0"
accelerate = "^0.18.0"
tokenizers = "^0.13.3"
datasets = { extras = ["tensorflow"], version = "^2.12.0" }
tqdm = "^4.65.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
more-itertools = "^9.1.0"
scikit-learn = "^1.2.2"
konoha = "^5.0.0"
mwparserfromhell = "^0.6.4"
python-snappy = "^0.6.1"
mojimoji = "^0.0.12"
peft = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
